--- a/assets/components/footer/css/footer.css
+++ b/assets/components/footer/css/footer.css
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     height: 60px;
-    background: #cbd5e1;
+    background: var(--background-color-footer);
     text-align: center;
     z-index: 11;
 }
@@ -17,6 +17,6 @@
 }
 
 .footer a {
-    color: black;
+    color: var(--text-color);
     text-decoration: none;
 }
