--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -11,7 +11,7 @@
 
 .componet-info {
     padding: 35px;
-    background-color: #e9ebea;
+    background-color: var(--background-color-info-component);
     border-radius: 13px;
     box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
@@ -20,6 +20,7 @@
     flex-direction: column;
     gap: 20px;
     animation: move 0.3s ease;
+    color: var(--text-color);
 }
 
 .search-component {
@@ -31,7 +32,8 @@
     padding: 10px 30px;
     outline: none;
     border: none;
-    background-color: #e9ebea;
+    color: var(--text-color);
+    background-color: var(--background-color-info-component);
     font-size: 20px;
     border-radius: 13px;
     box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
@@ -40,7 +42,7 @@
 }
 
 .all-components {
-    margin-top: 35px;
+    margin: 35px 0;
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
@@ -54,7 +56,8 @@
     padding: 20px;
     width: 300px;
     *height: 280px;
-    background-color: #d4d4d4;
+    color: var(--text-color);
+    background-color: var(--background-color-info-component);
     border-top: solid 6px black;
     box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.09);
@@ -103,12 +106,12 @@
     align-items: center;
     width: 40px;
     height: 40px;
-    background-color: #ffffff;
+    background-color: var(--background-color-btn-component);
     margin: 10px 0;
     cursor: pointer;
     font-size: 20px;
     border-radius: 50%;
-    color: black;
+    color: var(--text-color-invert);
     transition: all .3s ease;
     box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
@@ -116,7 +119,7 @@
 }
 
 .btn-download:hover {
-    background-color: #e9ebea;
+    background-color: var(--background-color-btn-component-hover);
 }
 
 .component-btn {
@@ -133,17 +136,17 @@
     cursor: pointer;
     width: 100%;
     padding: 8px;
-    background-color: #e9ebea;
+    background-color: var(--background-color-btn-component);
     transition: all .3s ease;
     border-radius: 7px;
-    color: black;
+    color: var(--text-color);
     box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
     -moz-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
 }
 
 .component-btn a:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--background-color-btn-component-hover);
 }
 
 @media only screen and (max-width:992px) {
