--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -111,7 +111,7 @@
     cursor: pointer;
     font-size: 20px;
     border-radius: 50%;
-    color: var(--text-color-invert);
+    color: var(--text-color);
     transition: all .3s ease;
     box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.09);
